Several bug correction and improvement on new billing model

--- a/modules/contract_insurance_invoice/locale/fr_FR.po
+++ b/modules/contract_insurance_invoice/locale/fr_FR.po
@@ -711,8 +711,8 @@ msgid "Validated"
 msgstr "Validé"
 
 msgctxt "selection:contract.premium,frequency:"
-msgid "Biannual"
-msgstr "bisannuelle"
+msgid "Half-yearly"
+msgstr "Semestriel"
 
 msgctxt "selection:contract.premium,frequency:"
 msgid "Monthly"
@@ -735,8 +735,8 @@ msgid "Yearly"
 msgstr "Annuel"
 
 msgctxt "selection:offered.billing_mode,frequency:"
-msgid "Biannual"
-msgstr "bisannuelle"
+msgid "Half-yearly"
+msgstr "Semestriel"
 
 msgctxt "selection:offered.billing_mode,frequency:"
 msgid "Monthly"
